place bomb but need to fix animation